force-app/main/default/objects/Account/fields/Agcelerate_Id__c.field-meta.xml
<CustomField>
    <fullName>Agcelerate_Id__c</fullName>
    <label>Agcelerate Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>