force-app/main/default/objects/Account/fields/Alternate_Address__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Address__c</fullName>
    <label>Alternate Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>