force-app/main/default/objects/Account/fields/CodigoSAP__c.field-meta.xml
<CustomField>
    <fullName>CodigoSAP__c</fullName>
    <label>Account Sap Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>