force-app/main/default/objects/Account/fields/Commercial_Team__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox will determine if an account is an internal GDM Commercial Account. This will be used to control the view of locations within GDM Explore and GDM Access. Commercial Team Accounts will see the locations that are &quot;Status&quot; = &quot;Public&quot;</inlineHelpText>
    <label>Commercial Team</label>
    <type>Checkbox</type>
</CustomField>