force-app/main/default/objects/Account/fields/Farm_Bussiness_Name__c.field-meta.xml
<CustomField>
    <fullName>Farm_Bussiness_Name__c</fullName>
    <label>Farm Bussiness Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>