force-app/main/default/objects/Account/fields/Grupo_de_Cuentas__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_Cuentas__c</fullName>
    <label>Account Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>US01 - Domestic Customers</fullName>
            </value>
            <value>
                <fullName>US02 - Foreing Customers</fullName>
                <label>US02 - Foreign Customers</label>
            </value>
            <value>
                <fullName>US03 - Ship To</fullName>
            </value>
            <value>
                <fullName>US04 - Branches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>