force-app/main/default/objects/Account/fields/Hide_Catalog_GDM__c.field-meta.xml
<CustomField>
    <fullName>Hide_Catalog_GDM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Catalog - GDM</label>
    <type>Checkbox</type>
</CustomField>