force-app/main/default/objects/Account/fields/Hide_Catalog_V__c.field-meta.xml
<CustomField>
    <fullName>Hide_Catalog_V__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Catalog - V</label>
    <type>Checkbox</type>
</CustomField>