force-app/main/default/objects/Account/fields/Id_Largo_Account__c.field-meta.xml
<CustomField>
    <fullName>Id_Largo_Account__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Largo Account</label>
    <type>Text</type>
</CustomField>