force-app/main/default/objects/Account/fields/Marketing_List__c.field-meta.xml
<CustomField>
    <fullName>Marketing_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies accounts which have been strategically defined as needing to be considered for marketing efforts. Ex. Exclude very small segment C’s.</inlineHelpText>
    <label>Marketing List</label>
    <type>Checkbox</type>
</CustomField>