force-app/main/default/objects/Account/fields/Nome_fantasia__c.field-meta.xml
<CustomField>
    <fullName>Nome_fantasia__c</fullName>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>