force-app/main/default/objects/Account/fields/Operates_for_DM__c.field-meta.xml
<CustomField>
    <fullName>Operates_for_DM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operates for DONMARIO</label>
    <type>Checkbox</type>
</CustomField>