force-app/main/default/objects/Account/fields/Product_Placement__c.field-meta.xml
<CustomField>
    <fullName>Product_Placement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will determine if the Account is Product Placement - In GDM Explore this will determine which set of Ratings wuil be available to the user&apos;s within this account</inlineHelpText>
    <label>Product Placement</label>
    <type>Checkbox</type>
</CustomField>