force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Discount Segment</description>
    <inlineHelpText>Identifies which marketing segment the account is in. Any account which contributes to the market should have a segment.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segment A+</fullName>
            </value>
            <value>
                <fullName>Segment A</fullName>
            </value>
            <value>
                <fullName>Segment B</fullName>
            </value>
            <value>
                <fullName>Segment C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>