force-app/main/default/objects/Account/fields/Show_source_Access__c.field-meta.xml
<CustomField>
    <fullName>Show_source_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this account see the location source in Access Analytics pages</description>
    <inlineHelpText>Indicates whether this account see the location source in Access Analytics pages</inlineHelpText>
    <label>Show Source - Access</label>
    <type>Checkbox</type>
</CustomField>