force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Risk</fullName>
                <color>#FF0000</color>
                <label>Finance Warning - Review Account</label>
            </value>
            <value>
                <fullName>Ok</fullName>
                <default>true</default>
                <label>Satisfactory</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>