force-app/main/default/objects/Account/fields/Status_Integration__c.field-meta.xml
<CustomField>
    <fullName>Status_Integration__c</fullName>
    <label>Status Integration</label>
    <length>40</length>
    <type>Text</type>
</CustomField>