force-app/main/default/objects/Account/recordTypes/GDM_Partner.recordType-meta.xml
<RecordType>
    <fullName>GDM_Partner</fullName>
    <active>true</active>
    <description>GDM Partner Account</description>
    <label>GDM Partner</label>
</RecordType>