force-app/main/default/objects/Account/recordTypes/GPOS_Account.recordType-meta.xml
<RecordType>
    <fullName>GPOS_Account</fullName>
    <active>true</active>
    <description>Record Type for GPOS Growers &amp; Dealers</description>
    <label>GPOS Account</label>
</RecordType>