force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>Operates_for_GDM__c</columns>
    <columns>Operates_for_DM__c</columns>
    <columns>Operates_for_VIRTUE__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>CodigoSAP__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Segment__c</columns>
    <columns>Location__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>Status_Integration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>Marketing_List__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Accounts</label>
</ListView>